--- a/package.json
+++ b/package.json
@@ -4,14 +4,18 @@
   "main": "index.js",
   "type": "module",
   "dependencies": {
+    "mongodb": "^6.17.0",
     "undici-types": "^7.8.0"
   },
   "devDependencies": {
+    "@testcontainers/mongodb": "^11.0.3",
     "@types/node": "^24.0.3",
+    "testcontainers": "^11.0.3",
     "typescript": "^5.8.3"
   },
   "scripts": {
-    "test": "node --test $(find tests -name \"*.spec.ts\")"
+    "test:unit": "node --test $(find tests -name \"*.spec.ts\")",
+    "test:integration": "node --test $(find tests -name \"*.test.ts\")"
   },
   "repository": {
     "type": "git",
