--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "@testcontainers/mongodb": "^11.0.3",
     "@types/node": "^24.0.3",
     "testcontainers": "^11.0.3",
-    "typescript": "^5.8.3"
+    "typescript": "^5.8.3",
+    "wiremock-captain": "^4.1.2"
   },
   "scripts": {
     "test:unit": "node --test $(find tests -name \"*.spec.ts\")",
