add api testing

--- a/package.json
+++ b/package.json
@@ -4,12 +4,15 @@
   "main": "index.js",
   "type": "module",
   "dependencies": {
+    "fastify": "^5.4.0",
     "mongodb": "^6.17.0",
     "undici-types": "^7.8.0"
   },
   "devDependencies": {
     "@testcontainers/mongodb": "^11.0.3",
     "@types/node": "^24.0.3",
+    "@types/supertest": "^6.0.3",
+    "supertest": "^7.1.1",
     "testcontainers": "^11.0.3",
     "typescript": "^5.8.3",
     "wiremock-captain": "^4.1.2"
