--- a/package.json
+++ b/package.json
@@ -4,11 +4,15 @@
   "main": "index.js",
   "type": "module",
   "dependencies": {
+    "@fastify/type-provider-typebox": "^5.1.0",
+    "@sinclair/typebox": "^0.34.35",
     "fastify": "^5.4.0",
     "mongodb": "^6.17.0",
     "undici-types": "^7.8.0"
   },
   "devDependencies": {
+    "@cucumber/cucumber": "^11.3.0",
+    "@cucumber/pretty-formatter": "^1.0.1",
     "@testcontainers/mongodb": "^11.0.3",
     "@types/node": "^24.0.3",
     "@types/supertest": "^6.0.3",
@@ -19,7 +23,8 @@
   },
   "scripts": {
     "test:unit": "node --test $(find tests -name \"*.spec.ts\")",
-    "test:integration": "node --test $(find tests -name \"*.test.ts\")"
+    "test:integration": "node --test $(find tests -name \"*.test.ts\")",
+    "test:uat": "cucumber-js -p default"
   },
   "repository": {
     "type": "git",
